# TIgameoflife

./: .gitignore  CMakeLists.txt  README.md
